# narrativediff

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
demos/: coverage-diff.json
demos/01-basic/: SCENARIO.md  event_rate_decision.json
demos/01-political-coverage/: SCENARIO.md  coverage-diff.json
demos/02-aligned-business-news/: SCENARIO.md  coverage-diff.json
demos/03-tabloid-vs-broadsheet/: SCENARIO.md  coverage-diff.json
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
integrations/: webhook.py
narrativediff/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_connect.py  test_hardening.py  test_smoke.py
