[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-narrativediff"
version = "0.1.0"
description = "News bias & framing diff across 50+ outlets per event"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["info-integrity", "cognis-digital", "cognis-neural-suite", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/narrativediff"

[project.scripts]
narrativediff = "narrativediff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["narrativediff"]
